--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
+    "dayjs": "^1.10.4",
     "dotenv": "^9.0.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
