--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,15 @@
 # APP
 PORT=3333
+APP_URL=http://localhost
 APP_WEB_URL=http://localhost:3000
-SECRET_KEY=
+APP_SECRET=
+APP_SECRET_REFRESH_TOKEN=
 
 #AWS CREDENTIALS
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_BUCKET=
 AWS_BUCKET_REGION=
+AWS_BUCKET_URL=
 
 disk=local
