--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/mime": "^2.0.3",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.41",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.0",
@@ -34,6 +36,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "aws-sdk": "^2.906.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "dayjs": "^1.10.4",
@@ -41,6 +44,8 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.5.2",
+    "multer": "^1.4.2",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.1.3",
