--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/mime": "^2.0.3",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.41",
+    "@types/nodemailer": "^6.4.1",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
@@ -43,9 +44,11 @@
     "dotenv": "^9.0.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.5.2",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.1.3",
