--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^14.14.41",
     "@types/nodemailer": "^6.4.1",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
@@ -52,6 +53,7 @@
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.1.3",
+    "swagger-ui-express": "^4.1.6",
     "ts-node-dev": "^1.1.6",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.32",
